--- a/package.json
+++ b/package.json
@@ -15,12 +15,13 @@
   "devDependencies": {
     "@testing-library/jest-dom": "5.1.1",
     "@testing-library/react": "10.0.1",
+    "jest-environment-jsdom-sixteen": "1.0.3",
     "typescript": "3.3.3"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test --env=jsdom",
+    "test": "react-scripts test --env=jest-environment-jsdom-sixteen",
     "eject": "react-scripts eject"
   },
   "browserslist": [
