--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
   "devDependencies": {
     "@testing-library/jest-dom": "5.1.1",
     "@testing-library/react": "10.0.1",
+    "@testing-library/react-hooks": "3.2.1",
     "jest-environment-jsdom-sixteen": "1.0.3",
+    "react-test-renderer": "16.13.1",
     "typescript": "3.3.3"
   },
   "scripts": {
